Fix uploader toggle button of file field not showing inside fieldgroup

--- a/site/assets/less/flexi_containers_rtl.less
+++ b/site/assets/less/flexi_containers_rtl.less
@@ -47,7 +47,7 @@ body .fc-mssg-inline {
 
 body .fc_uploader_n_props_box {
 	display: flex;
-	flex-direction: column-reverse;
+	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: start;
 	align-items: start;
